js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/l1.0.kt
internal const val constKey = "foo"

internal const val constVal = "2"

